# aperture-diffraction

./: ApertureOutline.cpp  ApertureOutline.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  GLSLCosineQualityChecker.cpp  GLSLCosineQualityChecker.hpp  Manipulator.cpp  README.mdown  ToolsWidget.cpp  ToolsWidget.hpp  cie-d65.hpp  common.cpp  common.hpp  glare-shader.frag  main.cpp
